# Data-Archive-Book

./: .gitignore  README.md  building.md  javapackage.json  notes.md  pyproject.toml
.history/: .gitignore_20250422082411  .gitignore_20250422082508  .gitignore_20250422170031  .gitignore_20250422171536  .gitignore_20250424084925  .gitignore_20250425073453  Build_20250425214319.md  Build_20250426092033.md  Build_20250426092037.md  Generation_20250422203329.md  Generation_20250422204308.md  README_20250422204434.md  README_20250423075612.md  README_20250423094308.md  README_20250423094953.md  README_20250423110619.md  README_20250423110745.md  README_20250423110752.md  README_20250424070417.md  README_20250426161713.md  README_20250426195636.md  README_20250426200017.md  README_20250426200106.md  book_20250420181741.json  book_20250420195657.json  buffer_size_issue_20250422163647.md  export-to-pdf_20250421074044.js  history_20250426090622.md  history_20250426091525.md  issues_20250420085612.md  issues_20250420195425.md  issues_20250420212354.md  issues_20250426091903.md  issues_20250426092400.md  notes_20250420212000.md  notes_20250421074211.md  notes_20250421074929.md  notes_20250421095643.md  notes_20250421110432.md  notes_20250421110854.md  (+16 more)
.history/DAB/: README_20250420213949.md  (+199 more)
DAB/: SUMMARY.md  Selector.md  data-archive-book.epub  error.md  export-to-pdf.js  generate_summary.py  grouping.py  main.py  mybook.epub  package.json  selected_files.py  selected_files_list.md
books/: NLP-data-archive-book.epub  README.md
docs/: issues.md  project_details.md
(+161 files in other folders)
