[project]
name = "data-archive-book"
version = "0.1.0"
description = "Turns the Data Archive into a book"
authors = [
    {name = "Rhys Wells",email = "rhyslwells@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
